add pic and fix margin

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,9 +59,9 @@
         "Creating and developing an Android app\n",
         "Creating Angular libraries for use by other teams\n",
         "Improving the current framework",
-        "Collaborating with cross-functional teams, such as product managers, designers, and other developers to deliver high-quality software solutions",
-        "Using version control systems, such as Git, to manage source code and collaborate with other developers\n",
-        "Designing and implementing responsive designs that work seamlessly across different devices and screen sizes\n"
+        "Improving the current framework",
+        "Using version control systems to manage source code",
+        "Designing and implementing responsive designs"
       ]
     },
     {
@@ -69,14 +69,13 @@
       "Title": "Raiffeisen Software",
       "Date": "08/2021-04/2023",
       "Description": [
-        "Developing websites and user interfaces\n",
-        "Designing and developing UX/UI for apps\n",
-        "Creating and developing an Android app\n",
-        "Creating Angular libraries for use by other teams\n",
+        "Developing websites and user interfaces",
+        "Designing and developing UX/UI for apps",
+        "Creating and developing an Android app",
+        "Creating Angular libraries for use by other teams",
         "Improving the current framework",
-        "Collaborating with cross-functional teams, such as product managers, designers, and other developers to deliver high-quality software solutions",
-        "Using version control systems, such as Git, to manage source code and collaborate with other developers\n",
-        "Designing and implementing responsive designs that work seamlessly across different devices and screen sizes\n"
+        "Using version control systems to manage source code",
+        "Designing and implementing responsive designs"
       ]
     } ,
     {
